hphp/test/zend7/Zend/tests/type_declarations/strict_call_weak.php.expectf

Fatal error: %s
Stack trace:
#0 %s(%d): function_declared_in_weak_mode(1)
#1 {main}
  thrown in %sstrict_call_weak_2.inc on line 5